plugins {
    id 'java'
    id 'application'
}

group = 'app.javatube.tubekeeper'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'main.Main'
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['resources']
        }
    }
    test {
        java {
            srcDirs = ['test']
        }
    }
}

repositories {
    mavenCentral()
    maven { 
        url = 'https://jitpack.io' 
    } 
}

dependencies {
    implementation 'com.github.felipeucelli:javatube:06b8313744'
    implementation 'org.json:json:20231013'
    implementation 'com.github.felipeucelli:nodejs_wrapper:c604a04b2d'
    implementation 'org.xerial:sqlite-jdbc:3.45.2.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    implementation 'org.slf4j:slf4j-simple:2.0.17'
}

test {
    useJUnitPlatform()
}
